Fixed issue: Background color not covering whole screen and Image covering BrickBox component

--- a/project-one/src/App.css
+++ b/project-one/src/App.css
@@ -1,22 +1,12 @@
 .App {
   text-align: center;
-  background-color: #d92727;
   color: #f2f1df;
-  /*font-family: 'SuperMario256', Arial, Helvetica, sans-serif;*/
-
-
 }
 
 body {
   margin: 0;
-  /*overflow: hidden;*/
-  width: 100%;
-  height: 100%;
-}
-
-div {
-  width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  background-color: #d92727;
 }
 
 h1{
