--- a/project-one/src/components/pages/Home/Home.css
+++ b/project-one/src/components/pages/Home/Home.css
@@ -1,32 +1,34 @@
 h1{
-    margin-bottom: 15px;
+    margin-bottom: 30px;
 }
 
 .home{
-    margin: 20px;
+    margin: 0;
     position:absolute;
     /*display: grid;*/
 }
+
 .home-content{
-    display: flex;
-    align-items: center;
-}
-
-.kingdoms{
-    width: 100%;
-    height: 200px;
-
     position: absolute;
     top: 50%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+}
+
+.kingdoms{
+    width: 100%;
+    height: auto;
+
+    /*position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);*/
 
 }
 
 .brick-box{
-    position: absolute;
-    bottom: 0;
 }
 /*.brickBox{
     margin: auto;
